@@ -12,7 +12,6 @@ include:
 - [fsspec](https://filesystem-spec.readthedocs.io/)[^1]
 - [gcsfs](https://gcsfs.readthedocs.io/)
 - [gensim](https://radimrehurek.com/gensim/)
-- [GPUtil](https://github.com/anderskm/gputil)
 - [icecream](https://github.com/gruns/icecream)
 - [leidenalg](https://leidenalg.readthedocs.io/)
 - [matplotlib](https://matplotlib.org/)
@@ -21,9 +20,10 @@ include:
 - [OWL-RL](https://owl-rl.readthedocs.io/)
 - [pandas](https://pandas.pydata.org/)
 - [pslpython](https://psl.linqs.org/)
-- [pySHACL](https://github.com/RDFLib/pySHACL)
 - [pyarrow](https://arrow.apache.org/)
 - [pylev](https://github.com/toastdriven/pylev)
+- [pynvml](https://github.com/gpuopenanalytics/pynvml)
+- [pySHACL](https://github.com/RDFLib/pySHACL)
 - [python-dateutil](https://dateutil.readthedocs.io/)
 - [python-igraph](https://igraph.org/python/)
 - [pyvis](https://pyvis.readthedocs.io/)
