@@ -3,7 +3,7 @@ csvwlib >= 0.3.2
 fsspec[gs,s3] >= 0.8.5
 gcsfs >= 0.7.1
 gensim >= 3.8.3
-GPUtil >= 1.4.0
+pynvml >= 8.0.4
 icecream >= 2.0.0
 matplotlib >= 3.3.4
 networkx >= 2.5
